network/uob-tv-ingestion-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
    name: uob-tv-ingestion-gateway
    namespace: video-proc-streaming
spec:
    selector:
        istio: ingressgateway # use istio default controller
    servers:
    - port:
        number: 1935
        name: rtmp
        protocol: TCP
      hosts:
        - "ingestion.uob-tv.co.uk"
