network/uob-tv-public-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: uob-tv-public-gateway
  namespace: app-backends
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "www.uob-tv.co.uk"
    - "uob-tv.co.uk"
    - "ingest.uob-tv.co.uk"
